# deepstream.io-client-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindPOCO.cmake  Foo.hpp  README.md  build-and-install-poco.bash  build-and-test.bash  build-and-test.sh  build-osx.sh  deepstream.i  fix-deepstream-swig.pl  fix-foo-swig.pl  foo.i  lcov.bash  run-afl.sh  std_unique_ptr.i  swig-build.sh  travis.sh  ubuntu-prerequisites.sh  version.hpp.in
bison-demo/: Makefile  callgrind.out.4822.bz2  main.c  parser.h  parser.y
cmake/modules/: FindPOCO.cmake
demo/bison/: main.c  parser.h  parser.y
demo/flex/: lexer.l  main.cpp  parser.cpp  parser.h  parser.hpp
demo/poco-websockets/: CMakeLists.txt  FindPOCO.cmake  README.md  client.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  cpp11-vs-cpp14.md  ctest-vs-boost.md  message-parser.md
examples/: CMakeLists.txt  ds-client.cpp  ds-example.cpp  ds-variant.cpp  fuzz-me.cpp  make-fuzzer-input.cpp  poco-ws-echo.cpp
flex-demo/: Makefile  callgrind.out.4827.bz2  callgrind.out.5872.bz2  lexer.l  main.cpp  parser.cpp  parser.h
include/: CMakeLists.txt  buffer.hpp  client.hpp  deepstream.hpp  error_handler.hpp  event.hpp  exception.hpp  message.hpp  message_builder.hpp  message_proxy.hpp  parser.h  parser.hpp  presence.hpp  random.hpp  request.hpp  scope_guard.hpp  time.hpp  use.hpp  websockets.hpp
include/deepstream/: CMakeLists.txt  buffer.hpp  client.hpp  config.h.in  core.hpp  error_handler.hpp  event.hpp  exception.hpp  impl.hpp  message.hpp  message_builder.hpp  message_proxy.hpp  parser.h  parser.hpp  presence.hpp  random.hpp  scope_guard.hpp  time.hpp  use.hpp  variant.hpp  websockets.hpp
include/deepstream/core/: buffer.hpp  client.hpp  error_handler.hpp  event.hpp  fwd.hpp  presence.hpp  websocket.hpp  ws.hpp
include/deepstream/lib/: basic-error-handler.hpp  json-handler.hpp  poco-ws.hpp  type-serializer.hpp
include/deepstream/poco/: ws.hpp
include/deepstream/websockets/: CMakeLists.txt  poco.hpp  pseudo.hpp
include/websockets/: poco.hpp  pseudo.hpp
scripts/: build-osx.sh  build-ubuntu.sh  check-clang-format.bash  ubuntu-prerequisites.sh
src/: CMakeLists.txt  client.cpp  deepstream.cpp  ds-client.cpp  ds-example.cpp  error_handler.cpp  event.cpp  exception.cpp  executable.cpp  fuzz-me.cpp  impl.cpp  impl.hpp  json-variant-visitor.cpp  lexer.l  make-fuzzer-input.cpp  message.cpp  message_builder.cpp  message_builder.hpp  message_proxy.cpp  parser.cpp  parser.hpp  presence.cpp  random.cpp  scope_guard.hpp  websockets.cpp  websockets.hpp
src/core/: CMakeLists.txt  _websockets.cpp  _websockets.hpp  client-impl.cpp  client-impl.hpp  client.cpp  connection.cpp  connection.hpp  deepstream.cpp  error_handler.cpp  event.cpp  exception.cpp  impl.cpp  impl.hpp  lexer.l  message.cpp  message.hpp  message_builder.cpp  message_proxy.cpp  message_proxy.hpp  parser.cpp  presence.cpp  random.cpp  random.hpp  scope_guard.hpp  state.cpp  state.hpp  time.hpp  websockets.cpp  websockets.hpp
src/core/test/: CMakeLists.txt  event.cpp  impl.cpp  message.cpp  parser.cpp  presence.cpp  pseudo-websocket.cpp  pseudo-websocket.hpp  pseudo.hpp  random.cpp  test-client.cpp  test-connection.cpp  test-event.cpp  test-impl.cpp  test-lexer.cpp  test-message.cpp  test-message_builder.cpp  test-presence.cpp
src/core/websockets/: pseudo.cpp  pseudo.hpp
src/lib/: CMakeLists.txt  _poco-client.cpp  _poco-client.hpp  poco-client.hpp  poco-ws.cpp
src/lib/websockets/: poco.cpp  poco.hpp  pseudo.cpp  pseudo.hpp
src/websockets/: poco.cpp  poco.hpp  pseudo.cpp  pseudo.hpp
swig/: deepstream.i  fix-deepstream-swig.pl
test/: CMakeLists.txt  client.cpp  deepstream.cpp  dummy.cpp  event.cpp  impl.cpp  lexer.cpp  message.cpp  message_builder.cpp  parser.cpp  presence.cpp  python-swig-test.py  random.cpp  simple.cpp  utils.hpp
test/core/: CMakeLists.txt  test-connection.cpp  test-event.cpp  test-lexer.cpp  test-message.cpp  test-message_builder.cpp  test-parser.cpp  test-presence.cpp  test-random.cpp
test/lib/: CMakeLists.txt  test-serial.cpp
test/swig/: ws.py
